--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -17,3 +17,9 @@
 .info__name {
   text-align: center;
 }
+.container {
+  display: flex;
+  gap: 1em;
+  flex-wrap: wrap;
+  justify-content: center;
+}
